--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   shared_preferences: ^2.0.5
   freezed: ^0.12.6
   persistent_bottom_nav_bar: ^4.0.2
+  tuple: ^2.0.0
+  google_fonts: ^2.0.0
+  syncfusion_flutter_datepicker: 19.1.67-beta
 
 dev_dependencies:
   flutter_test:
