--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dev_dependencies:
   build_runner:
   json_serializable:
   freezed:
-  flutter_gen:
+  flutter_gen_runner:
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
